# DifferentiableOwenScrambling

./: CMakeLists.txt  LICENSE  README.md  plot.py
cmake/: cli11.cmake  geogram.cmake  openmp.cmake  utk.cmake
data/: cube.geogram  ldbn1024.pcf  ldbn256.pcf
src/SmoothOwen/: SmoothOwen.cpp  SmoothOwen.hpp
src/loss/: loss.cpp  loss.hpp
src/loss/fourier/: PCF.cpp  PCF.hpp
src/loss/gbn/: gbn.cpp  gbn.hpp
src/loss/integration/: Integrands.cpp  Integrands.hpp  Integration.hpp
src/loss/screenspace/: screenspace.hpp  screenspace_reg.hpp
src/loss/semi_discrete_ot_2d/: transport.cpp  transport.h
src/loss/semi_discrete_ot_3d/: geogram_wrapper.cpp  geogram_wrapper.hpp
src/main/: main_gbn.cpp  main_int.cpp  main_pcf.cpp  main_progressive_gbn.cpp  main_progressive_int.cpp  main_progressive_w2.cpp  main_w2.cpp
src/utils/: Array.cpp  Array.hpp  BinaryUtils.cpp  BinaryUtils.hpp  Logger.cpp  Logger.hpp  ProgressBar.hpp  utk_utils.hpp
